[package]
name = "countdown-solver"
version = "0.1.0"
authors = ["mohe2015 <Moritz.Hedtke@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
codegen-units = 1
debug = true
#opt-level = "z"